--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,10 +12,14 @@
         android:layout_height="50dp"
         android:text="down"
         tools:layout_editor_absoluteX="156dp"
-        tools:layout_editor_absoluteY="459dp" />
+        tools:layout_editor_absoluteY="459dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/textV"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
-
+        android:id="@+id/textV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
@@ -30,6 +34,10 @@
         android:layout_height="wrap_content"
         android:text="up"
         tools:layout_editor_absoluteX="161dp"
-        tools:layout_editor_absoluteY="198dp" />
+        tools:layout_editor_absoluteY="198dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textV"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
